--- a/git/src/org/netbeans/modules/git/ui/branch/CreateBranchPanel.form
+++ b/git/src/org/netbeans/modules/git/ui/branch/CreateBranchPanel.form
@@ -84,8 +84,8 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblError">
       <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/org/netbeans/modules/git/resources/icons/info.png"/>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="org.openide.util.ImageUtilities.loadImageIcon(&quot;/org/netbeans/modules/git/resources/icons/info.png&quot;, false)" type="code"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/netbeans/modules/git/ui/branch/Bundle.properties" key="MSG_CreateBranch.errorBranchExists" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
